crates/carta/tests/snapshots/golden_writer__rtf__figure__figure-captioned.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{\pard \ql \f0 \sa0 \li0 \fi0 {\cf1 [image: pic.png]\cf0}\par}
{\pard \ql \f0 \sa0 \li0 \fi0 a caption\par}
