crates/carta/tests/snapshots/golden_writer__rtf__figure__figure-no-alt.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{\pard \ql \f0 \sa180 \li0 \fi0 {\cf1 [image: pic.png]\cf0}\par}
